# tomodachi

./: .editorconfig  .flake8  .gitignore  .isort.cfg  Install-Packages.ps1  config.example.py  intercept_handler.py  launcher-server.py  launcher.py  patches.py  pyproject.toml  readme.md  requirements.txt
.github/: FUNDING.yml
api/: app.py
docs/: Emoji Icons.md
sql/: genshin.sql  schema 2.sql
tomodachi/core/: __init__.py  abc.py  actions.py  bot.py  cache.py  checks.py  cog.py  context.py  enums.py  exceptions.py  icons.py  infractions.py  menus.py  models.py
tomodachi/exts/: 2d_world.py  default.py  errors.py  events.py  genshin.py  help.py  info.py  management.py  moderation.py  owner.py  reminders.py  tools.py
tomodachi/utils/: __init__.py  converters.py  decos.py  factories.py  helpers.py  humanbool.py  icons.py  pgsql.py  singleton.py  text.py  timestamp.py
tomodachi/utils/apis/: __init__.py  anilist.py
tomodachi/utils/database/: __init__.py  instance.py  schema.py  schema.sql
