[tool.poetry]
name = "tomodachi"
version = "0.1.1"
description = "Multipurpose Discord bot written in Python"
authors = ["howaitoreivun <72914371+howaitoreivun@users.noreply.github.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = "^0.22.0"
aioredis = "^1.3.1"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
jishaku = {git = "https://github.com/Gorialis/jishaku", rev = "master"}
ujson = "^4.0.2"
discord-flags = "^2.1.1"
gTTS = "^2.2.2"
Pillow = "^8.2.0"
more-itertools = "^8.7.0"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
pydantic = "^1.8.1"
no-blocking-io = "^0.0.3"
idna = {version = "^3.1", optional = true}
urllib3 = "^1.26.4"
uvloop = {version = "^0.15.2", optional = true}
databases = "^0.4.3"
psycopg2-binary = {version = "^2.8.6", optional = true}
attrs = "^20.3.0"
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
sqlalchemy-stubs = {version = "^0.4", optional = true}
mypy = "^0.812"
isort = {version = "^5.8.0", optional = true}

[tool.poetry.extras]
speed = ["uvloop"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
length_sort = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
