[tool.poetry]
authors = ["howaitoreivun <72914371+howaitoreivun@users.noreply.github.com>"]
description = "Multipurpose Discord bot written in Python"
license = "MPL-2.0"
name = "tomodachi"
version = "0.2.0a"

[tool.poetry.dependencies]
Pillow = "^8.2.0"
aioredis = {extras = ["hiredis"], version = "^1.3.1"}
arrow = "^1.1.0"
asyncpg = "^0.22.0"
attrs = "^20.3.0"
databases = "^0.4.3"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
discord-flags = "^2.1.1"
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git"}
fastapi = "^0.63.0"
gTTS = "^2.2.2"
idna = {version = "^3.1", optional = true}
jishaku = {git = "https://github.com/Gorialis/jishaku", rev = "master"}
more-itertools = "^8.7.0"
no-blocking-io = "^0.0.3"
psycopg2-binary = {version = "^2.8.6", optional = true}
pydantic = "^1.8.1"
python = "^3.9"
ujson = "^4.0.2"
urllib3 = "^1.26.4"
uvicorn = "^0.13.4"
uvloop = {version = "^0.15.2", optional = true}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = {version = "^5.8.0", optional = true}
mypy = "^0.812"
sqlalchemy-stubs = {version = "^0.4", optional = true}

[tool.poetry.extras]
speed = ["uvloop"]

[tool.black]
line-length = 120

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
