[tool.poetry]
authors = ["snezhniy <72914371+snezhniy@users.noreply.github.com>"]
description = "Multipurpose Discord bot written in Python"
license = "MPL-2.0"
name = "tomodachi"
version = "0.2.0a"

[tool.poetry.dependencies]
Pillow = "^9.0.0"
aioredis = {version = "2.0.0a1", extras = ["hiredis"]}
arrow = "^1.1.1"
asyncpg = "^0.22.0"
attrs = "^20.3.0"
databases = "^0.4.3"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git"}
humanize = "^3.10.0"
idna = {version = "^3.2", optional = true}
jishaku = "^2.1.0"
more-itertools = "^8.8.0"
no-blocking-io = "^0.0.3"
orjson = "^3.5.4"
psycopg2-binary = {version = "^2.9.1", optional = true}
pydantic = "^1.8.1"
python = "^3.9"
ujson = "^5.1.0"
uvicorn = "^0.13.4"
uvloop = {version = "^0.15.2", optional = true}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.2"
isort = {version = "^5.8.0", optional = true}
mypy = "^0.812"
sqlalchemy-stubs = {version = "^0.4", optional = true}

[tool.poetry.extras]
speed = ["uvloop"]

[tool.black]
line-length = 120

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
